[gd_scene load_steps=6 format=3 uid="uid://diilsp08x1c5p"]

[ext_resource type="Texture2D" uid="uid://ywj20bll6dvq" path="res://Assets/rounded_rectangle.png" id="1_h44xp"]
[ext_resource type="Script" uid="uid://d284mxhqqgl3i" path="res://powerup_management/powerup_card.gd" id="1_j12n4"]
[ext_resource type="FontFile" uid="uid://dhvh1yxj5ypxj" path="res://Assets/Daydream.ttf" id="2_5xpxd"]

[sub_resource type="LabelSettings" id="LabelSettings_j12n4"]
font = ExtResource("2_5xpxd")
font_size = 27
font_color = Color(0.29, 0.0638, 0.0638, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5xpxd"]
size = Vector2(208, 332)

[node name="powerup_card" type="Node2D"]
z_index = 2
script = ExtResource("1_j12n4")

[node name="RoundedRectangle" type="Sprite2D" parent="."]
modulate = Color(0.945045, 0.970626, 0.928741, 1)
texture = ExtResource("1_h44xp")

[node name="Label" type="Label" parent="."]
offset_left = -143.0
offset_top = -167.0
offset_right = 143.0
offset_bottom = -83.0
text = "increase rate of fire"
label_settings = SubResource("LabelSettings_j12n4")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 129
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_5xpxd")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
